force-app/main/default/objects/Opportunity/fields/Application_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_End_Date__c</fullName>
    <description>This field indicates the application end date for a opportunity.</description>
    <label>Application End Date</label>
    <type>DateTime</type>
</CustomField>