force-app/main/default/objects/Opportunity/fields/Application_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Application_Instructions__c</fullName>
    <label>Application Instructions</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>