force-app/main/default/objects/Opportunity/fields/Application_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Start_Date__c</fullName>
    <description>This field indicates the application start date for a opportunity.</description>
    <label>Application Start Date</label>
    <type>DateTime</type>
</CustomField>