force-app/main/default/objects/Opportunity/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>This field indicates the contract end date for the corresponding opportunity.</description>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>