force-app/main/default/objects/Opportunity/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>This field indicates the contract start date for the corresponding opportunity.</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>