force-app/main/default/objects/Opportunity/fields/Flexible_Deadlines__c.field-meta.xml
<CustomField>
    <fullName>Flexible_Deadlines__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate that opportunities can be pushed within defined hard limits.</description>
    <label>Flexible Deadlines</label>
    <type>Checkbox</type>
</CustomField>