force-app/main/default/objects/Opportunity/fields/Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fundraiser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>