force-app/main/default/objects/Opportunity/fields/Is_Anonymous__c.field-meta.xml
<CustomField>
    <fullName>Is_Anonymous__c</fullName>
    <label>Is Anonymous</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Donor Name Anonymous</fullName>
            </value>
            <value>
                <fullName>Donor Name &amp; Amount Anonymous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>