force-app/main/default/objects/Opportunity/fields/Non_Deductible_Amount_Description__c.field-meta.xml
<CustomField>
    <fullName>Non_Deductible_Amount_Description__c</fullName>
    <label>Non-Deductible Amount Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>