force-app/main/default/objects/Opportunity/fields/Pass_Thru_Grant_Admin__c.field-meta.xml
<CustomField>
    <fullName>Pass_Thru_Grant_Admin__c</fullName>
    <label>Pass Thru Grant Admin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>