force-app/main/default/objects/Opportunity/fields/Pass_thru_Grant_Funds__c.field-meta.xml
<CustomField>
    <fullName>Pass_thru_Grant_Funds__c</fullName>
    <label>Pass thru Grant Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>