force-app/main/default/objects/Opportunity/fields/Proposal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Amount__c</fullName>
    <label>Proposal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>