force-app/main/default/objects/Opportunity/fields/Public_Recognition_Name__c.field-meta.xml
<CustomField>
    <fullName>Public_Recognition_Name__c</fullName>
    <label>Public Recognition Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>