force-app/main/default/objects/Opportunity/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Endowment</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>FY18</fullName>
            </value>
            <value>
                <fullName>Illinois Main Streets</fullName>
            </value>
            <value>
                <fullName>Individual Giving</fullName>
            </value>
            <value>
                <fullName>Main Street America</fullName>
            </value>
            <value>
                <fullName>Main Street America Institute</fullName>
            </value>
            <value>
                <fullName>Main Street Now</fullName>
            </value>
            <value>
                <fullName>Scholarships</fullName>
            </value>
            <value>
                <fullName>Sweet Aubum</fullName>
            </value>
            <value>
                <fullName>UrbanMain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>