force-app/main/default/objects/Opportunity/fields/Tender__c.field-meta.xml
<CustomField>
    <fullName>Tender__c</fullName>
    <label>Tender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card(Offline-No Charge)</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card(Online)</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>E-Check/ACH</fullName>
            </value>
            <value>
                <fullName>Non cash</fullName>
            </value>
            <value>
                <fullName>Paid by CP-Check</fullName>
            </value>
            <value>
                <fullName>Paid by CP-Contract</fullName>
            </value>
            <value>
                <fullName>Paid by CP-ACH</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>