force-app/main/default/objects/Opportunity/fields/Tentative_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Submission_Date__c</fullName>
    <label>Tentative Submission Date</label>
    <type>Date</type>
</CustomField>