force-app/main/default/objects/Opportunity/validationRules/Required_fields_on_CW_for_Gift_Transctn.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_on_CW_for_Gift_Transctn</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    OR(
        ISBLANK(AccountId),
        ISBLANK(TEXT(Payment_Method__c)),
        ISBLANK(Awarded_Amount__c)
    )
)</errorConditionFormula>
    <errorMessage>Please fill Account, Payment Method and Awarded Amount before marking the Opportunity as Closed Won.</errorMessage>
</ValidationRule>