force-app/main/default/objects/Opportunity/listViews/Funding_Priorities.listView-meta.xml
<ListView>
    <fullName>Funding_Priorities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Funding_priorities__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Funding_priorities__c</field>
        <operation>includes</operation>
        <value>Civic Infrastructure and Democracy,Climate Resilience,Education,Intermediary Grantmaking,Small Business,Sponsorship,Unrestricted</value>
    </filters>
    <label>Funding Priorities</label>
</ListView>